added MarketInfo.vue
